feat(model): Models updated to doa soft delete on entities that store historical data.